# hse-oop-project

./: README.md
practice/: CMakeLists.txt  main.cpp
practice/include/: bw_matrix.h  circle.h  color.h  matrix.h  rectangle.h  rgb_matrix.h  shape.h  triangle.h
practice/src/: bw_matrix.cpp  circle.cpp  matrix.cpp  rectangle.cpp  rgb_matrix.cpp  triangle.cpp
